--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
+    "const": "^1.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
